# SIKE

./: pyproject.toml
src/sike/tests/: test_plasma_utils.py
tests/: test_integrated.py
